--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "7.45.2",
+    "react-imask": "^7.3.0",
     "react-router-dom": "^6.22.0",
     "recoil": "^0.7.7",
     "yup": "1.2.0"
